# BLoadRecorder

./: .gitignore  CMakeLists.txt  CpuFreqMonitor.hpp  CpuLoadMonitor.hpp  FpsMonitor.hpp  MonitorBase.hpp  ThermalMonitor.hpp  af  draw_auto.hpp  draw_svg.hpp  monitor_test.json  readme.md  test.cpp  test_monitors.cpp
.github/workflows/: main.yml
src/: CpuFreqMonitor.hpp  CpuLoadMonitor.hpp  FpsMonitor.hpp  MonitorBase.hpp  ThreadMonitor.hpp  draw_auto.hpp  draw_svg.hpp  monitors.cpp  test.cpp
